--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
     <ul class="navbar-nav me-0 mb-2 mb-lg-0 d-flex justify-content-between align-items-center">
       <!-- 로고 -->
       <div>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'reviews:index' %}">
           <img src="{% static 'images/namung_horizontalLogo.png' %}" alt="Logo" style="width: 11rem; height: 4rem;">
         </a>
       </div>
@@ -41,6 +41,12 @@
           </li>
           <li class="nav-item me-4 nav1-text">
             <a class="nav-link" href="{% url 'walkings:index' %}">산책나가기</a>
+          </li>
+          <li class="nav-item me-4 nav1-text">
+            <a class="nav-link" href="{% url 'info:hospital' %}">병원찾기</a>
+          </li>
+          <li class="nav-item me-4 nav1-text">
+            <a class="nav-link" href="{% url 'info:deserted' %}">유기견보호소</a>
           </li>
       </div>
     </ul>
