--- a/schedules/templates/schedules/calendar.html
+++ b/schedules/templates/schedules/calendar.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav me-0 mb-2 mb-lg-0 d-flex justify-content-between align-items-center">
       <!-- 로고 -->
       <div>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'reviews:index' %}">
           <img src="{% static 'images/namung_horizontalLogo.png' %}" alt="Logo" style="width: 11rem; height: 4rem;">
         </a>
       </div>
@@ -59,6 +59,12 @@
           <li class="nav-item me-4 nav1-text">
             <a class="nav-link" href="{% url 'walkings:index' %}">산책나가기</a>
           </li>
+          <li class="nav-item me-4 nav1-text">
+            <a class="nav-link" href="{% url 'info:hospital' %}">병원찾기</a>
+          </li>
+          <li class="nav-item me-4 nav1-text">
+            <a class="nav-link" href="{% url 'info:deserted' %}">유기견보호소</a>
+          </li>
       </div>
     </ul>
   </div>
@@ -69,30 +75,25 @@
     <header class="nav2">
       <div class="nav_div">
         <!-- 프로필 이미지 -->
-        {% comment %} <img class="nav2 navimg" src="{{ user.profile }}" alt="{{ user.username }}"> {% endcomment %}
+        <a href="{% url 'accounts:profile' user.username %}"><img class="nav2 navimg" src="../media/{{ user.profile }}" alt="{{ user.username }}"></a>
         <span>
-            <p class="">{{ user.username }}</p>
+          <a style="text-decoration: none; color: #544B44;" href="{% url 'accounts:profile' user.username %}"><p class="">{{ user.username }}</p></a>
             <p class="">강아지 이름</p>
         </span>
       </div>
       <div class="nav2_link">
         <span>
-            <a class="mx-1" href="{% url 'schedules:calendar' %}">Calendar</a>
-            <a class="mx-1" href="{% url 'schedules:running_events' %}"><i class="icon fa fa-circle-o"></i> Running</a>
-            <a class="mx-1" href="{% url 'schedules:all_events' %}">All</a>
+            <a style="text-decoration: none; color: #544B44;" class="mx-1" href="{% url 'schedules:calendar' %}">달력</a>
+            <a style="text-decoration: none; color: #544B44;" class="mx-1" href="{% url 'schedules:running_events' %}"><i class="icon fa fa-circle-o"></i>다가오는 일정</a>
+            <a style="text-decoration: none; color: #544B44;" class="mx-1" href="{% url 'schedules:all_events' %}">모든 일정</a>
         </span>
       </div>
     </header>
   </div>
   <div class="app-content container">
-    <div class="app-title">
-    <div>
+
         <h1><i class="fa fa-calendar"></i> Calendar</h1>
-    </div>
-    <ul class="app-breadcrumb breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Calendar</a></li>
-    </ul>
-    </div>
+
   
   <div class="row">
       <div class="col-md-12">
