--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -26,12 +26,25 @@
                         <div class="login-wrap p-4 p-md-5">
                             <div class="row justify-content-center py-md-5">
                                 <div class="col-lg-9">
+                                    {% if request.user.is_authenticated %}
+                                    <div class="w-100">
+                                        <p class="mt-4">멍스타그램<br><a href="{% url 'reviews:index' %}" class="enter">MUNGSTAGRAM</a></p>
+                                    </div>
+                                    <div class="w-100">
+                                        <p class="mt-4">당근산책<br><a href="{% url 'walkings:index' %} " class="enter">SANCHAEK</a></p>
+                                    </div>
+                                    <div class="w-100">
+                                        <p class="mt-4">일정관리<br><a href="{% url 'schedules:calendar' %} " class="enter">CALENDAR</a></p>
+                                    </div>
+                                    {% else %}
                                     <div class="w-100">
                                         <p class="mt-4">계정이 있어요! <a href="{% url 'accounts:login' %}" class="enter">LOG IN</a></p>
                                     </div>
                                     <div class="w-100">
                                         <p class="mt-4">새로 오셨나봐요? <a href="{% url 'accounts:signup' %} " class="enter">Sign Up</a></p>
                                     </div>
+                                    {{ request.user.username }}님, 환영합니다!!
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="row justify-content-center py-md-5">
