--- a/walkings/templates/walkings/index.html
+++ b/walkings/templates/walkings/index.html
@@ -79,6 +79,43 @@
               {% endif %}
             {% endif %}
             <a href="{% url 'walkings:detail' dogr.pk %}" class="btn btn-primary card-link">자세히보기</a>
+            <!-- Button trigger modal -->
+            <button type="button" onclick="detailMap({{dogr.pk}})" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-{{dogr.pk}}">
+              modal
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal-{{dogr.pk}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">{{dogr.title}}</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div id="detail-map-{{dogr.pk}}" style="width:450px;height:350px;"></div>
+                    <p>공원이름: {{ dogr.park.parkName }}</p>
+                    <p>공원주소: {{ dogr.park.address }}</p>
+                    <p>공원주최자: {{ dogr.user.username }}</p>
+                
+                    {% for joiner in dogr.join.all %}
+                    <img src="{{ joiner.profile.url }}" alt="{{ dogr.user.username }}의 사진" style="height: 3rem; width: 3rem; border-radius:50%; border: 1px solid black;">
+                    
+                      {% for dog in joiner.dog_set.all %}
+                        <img src="{{ dog.dogphoto.url }}" alt="{{ dog.name }}의 사진" style="height: 3rem; width: 3rem; border-radius:50%; border: 1px solid black;">
+                      {% endfor %}
+                
+                    {% endfor %}
+                    <p id="park_lat-{{dogr.pk}}">{{dogr.park.latitude}}</p>
+                    <p id="park_lon-{{dogr.pk}}">{{dogr.park.longitude}}</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- modal end -->
           </div>
         </div>
       </div>
@@ -94,6 +131,49 @@
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5002adb5652b8017c76603959cbbf663&libraries=services"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
+
+
+//-------------------------------디테일 맵 설정-------------------------------------------------------
+function detailMap(e){
+
+  const latitude = document.querySelector(`#park_lat-${e}`).innerText
+  const longtitude = document.querySelector(`#park_lon-${e}`).innerText
+  //------------------------------------지도 기본 설정--------------------------------------------
+  var mapContainer = document.getElementById(`detail-map-${e}`), // 지도를 표시할 div
+    mapOption = {
+      center: new kakao.maps.LatLng(latitude, longtitude), // 지도의 중심좌표
+      level: 5 // 지도의 확대 레벨
+    };
+  
+    
+  // 지도를 생성합니다    
+  var map = new kakao.maps.Map(mapContainer, mapOption);
+
+  // 지도를 현재 위치 중심으로 이동
+  var currentPos = new kakao.maps.LatLng(latitude, longtitude)
+  map.setCenter(currentPos)
+  map.panTo(currentPos);
+
+  // 마커 이미지의 이미지 크기 입니다
+  var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+  var imageSize = new kakao.maps.Size(24, 35);
+  
+  
+  var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+  
+  // 마커를 생성합니다
+  var marker = new kakao.maps.Marker({
+    map: map, // 마커를 표시할 지도
+    position: new kakao.maps.LatLng(latitude, longtitude), // 마커를 표시할 위치
+    //  title: , // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+    image: markerImage, // 마커 이미지
+    clickable: true,
+  });
+
+  setTimeout(function(){ map.relayout(); map.setCenter(currentPos); }, 500);
+}
+
+  //-----------------------------------------메인 지도------------------------------------------------------
   const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
   const options = {
     enableHighAccuracy: true,
