--- a/info/templates/info/place_index.html
+++ b/info/templates/info/place_index.html
@@ -46,12 +46,20 @@
 </div>
 
 <div class="s21_album_list area">
+  <p>{{slideimages}}</p>
   {% for place in posts %}
   <div class="s21_animal_conts pr">
-    <a class="s21_hospital_conts_photo" href="" style="background: url('http://appdata.hungryapp.co.kr/images/hatdog/ar/2018_03/M152221541007678108.jpg	') center center no-repeat ;"></a>
+    <a class="s21_hospital_conts_photo" href="" style="background: url('{{slideimages}}') center center no-repeat ;"></a>
     <div class="s21_animal_conts_tbox">
       <h4>{{place.name}}</h4>
-      <p>{{place.tel}}</p>
+      <p>
+        {{place.tel}} 
+        {% for slideimage in slideimages %}
+        {% if slideimage.petplace_id == place.id %}
+        {{slideimage.slideimage}}
+        {% endif %}
+        {% endfor %}
+      </p>
     </div>
     <div class="s21_hospital_conts_tbox">
       <h5>{{place.address}}</h5>
