--- a/info/templates/info/place_index.html
+++ b/info/templates/info/place_index.html
@@ -11,9 +11,9 @@
 </script>
 <div class="s21_hospital_m_top pr">
   <div class="h21_top_cbox pr area">
-    <h3 class="">유기견 안내</h3>
+    <h3 class="">반려동물 동반가능 여행지</h3>
     <p class="h21_h3_line_c"></p>
-    <p class="h21_h3_text_c">반려동물을 사랑으로 입양하세요</p>
+    <p class="h21_h3_text_c">반려동물과 함께할 수 있는 여행지입니다</p>
     <p class="h21_com_t_left pa slide-in-blurred-left"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="강아지"></p>
     <p class="h21_com_t_right pa slide-in-blurred-right"><img src="http://appdata.hungryapp.co.kr/images/hatdog/img/pc_img/hospital/hos_left4.png" alt="청진기"></p>
   </div>
@@ -39,27 +39,19 @@
     <option value="울산" {% if areaval == "울산" %}selected{% endif %}>울산</option>
     <option value="제주" {% if areaval == "제주" %}selected{% endif %}>제주</option>
   </select>
-  <form action="{% url 'info:deserted'%}" role='search' id='searchfunc1'>
+  <form action="{% url 'info:place'%}" role='search' id='searchfunc1'>
     <input type="text" id="search-type-01" name='search' placeholder='이름, 주소로 검색이 가능합니다.'>
     <button type="submit"><i class="fas fa-search"></i></button>
   </form>
 </div>
 
 <div class="s21_album_list area">
-  <p>{{slideimages}}</p>
   {% for place in posts %}
   <div class="s21_animal_conts pr">
-    <a class="s21_hospital_conts_photo" href="" style="background: url('{{slideimages}}') center center no-repeat ;"></a>
+    <a class="s21_hospital_conts_photo" href="" style="background: url('{{place.imageURL}}') center center no-repeat ;"></a>
     <div class="s21_animal_conts_tbox">
       <h4>{{place.name}}</h4>
-      <p>
-        {{place.tel}} 
-        {% for slideimage in slideimages %}
-        {% if slideimage.petplace_id == place.id %}
-        {{slideimage.slideimage}}
-        {% endif %}
-        {% endfor %}
-      </p>
+      <p>{{place.tel}}</p>
     </div>
     <div class="s21_hospital_conts_tbox">
       <h5>{{place.address}}</h5>
